--- a/vagrant/VagrantFile
+++ b/vagrant/VagrantFile
@@ -1,9 +1,18 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+require 'net/http'
+
+$script = <<SCRIPT
+  Net::HTTP.get_response(
+    URI.parse("https://raw.github.com/lucasmezencio/config-files/master/vagrant/bootstrap.sh")
+  ).body
+SCRIPT
+
 Vagrant.configure("2") do |config|
   config.vm.box = "precise64"
   config.vm.box_url = "http://files.vagrantup.com/precise64.box"
   config.vm.network :forwarded_port, host: 4567, guest: 80
-  config.vm.provision :shell, :path => "bootstrap.sh"
+  # config.vm.provision :shell, :path => "bootstrap.sh"
+  config.vm.provision :shell, :inline => $script
 end
