--- a/vagrant/VagrantFile
+++ b/vagrant/VagrantFile
@@ -2,14 +2,14 @@
 # vi: set ft=ruby :
 
 $script = <<SCRIPT
-  result=$(wget -qO- https://raw.github.com/lucasmezencio/config-files/master/vagrant/bootstrap.sh)
-  $($result)
+  aptitude update
+  aptitude install curl
+  curl http://bit.ly/VagrantBootstrap|sh
 SCRIPT
 
 Vagrant.configure("2") do |config|
   config.vm.box = "precise64"
   config.vm.box_url = "http://files.vagrantup.com/precise64.box"
   config.vm.network :forwarded_port, host: 4567, guest: 80
-  # config.vm.provision :shell, :path => "bootstrap.sh"
   config.vm.provision :shell, :inline => $script
 end
