--- a/vagrant/VagrantFile
+++ b/vagrant/VagrantFile
@@ -4,7 +4,7 @@
 $script = <<SCRIPT
   aptitude update
   aptitude install -y curl
-  curl http://bit.ly/VagrantBootstrap|sh
+  curl https://raw.github.com/lucasmezencio/config-files/master/vagrant/bootstrap.sh|sh
 SCRIPT
 
 Vagrant.configure("2") do |config|
