--- a/vagrant/default.conf
+++ b/vagrant/default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    DocumentRoot /var/www/public
+    DocumentRoot /var/www/web
     SetEnv APPLICATION_ENV dev
 
     <Directory />
@@ -7,7 +7,7 @@
         AllowOverride All
     </Directory>
 
-    <Directory /var/www/>
+    <Directory /var/www/web>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         Order allow,deny
