--- a/bash-mac/.env
+++ b/bash-mac/.env
@@ -1,3 +1,5 @@
 #!/bin/zsh
 
+fpath=(/usr/local/share/zsh-completions $fpath)
+
 alias ll="ls -laFG" # Showing all files (with indicators) and colouring them in list
