--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,25 @@
   email = lucas.mezencio@gmail.com
 [core]
   excludesfile = /Users/alucard/.gitignore_global
+# so much color
 [color]
-  ui = true
+  ui = always
+[color "diff"]
+  meta = yellow bold
+  commit = green bold
+  frag = magenta bold
+  old = red bold
+  new = green bold
+  whitespace = red reverse
+[color "diff-highlight"]
+  oldNormal = red bold
+  oldHighlight = "red bold 52"
+  newNormal = "green bold"
+  newHighlight = "green bold 22"
+[color "status"]
+  added = green
+  changed = yellow
+  untracked = cyan
 [alias]
   ci = commit
   st = status -sb
