--- a/.gitconfig
+++ b/.gitconfig
@@ -27,3 +27,4 @@
   st = status -sb
   co = checkout
   hist = log --all --graph --decorate --oneline --abbrev-commit
+  dsf = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy | less --tabs=4 -RFX; }; f"
