--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
   st = status -sb
   co = checkout
   hist = log --all --graph --decorate --oneline --abbrev-commit
+  # this alias need to diff-so-fancy to be installed. be warned
   dsf = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy | less --tabs=4 -RFX; }; f"
 [git-up "fetch"]
   all = true
