--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-#!/bin/zsh
-
 fpath=(/usr/local/share/zsh-completions $fpath)
 
 alias ll="ls -laFG" # Showing all files (with indicators) and colouring them in list
+alias pip-up="pip freeze --local | grep -v '^\-e' | cut -d = -f 1 | xargs -n1 pip install -U"
+alias activate="source env/bin/activate"
+alias brew-up="brew update && brew upgrade && brew cu && brew cleanup && brew cask cleanup"
