--- a/.env
+++ b/.env
@@ -3,6 +3,13 @@ fpath=(/usr/local/share/zsh-completions $fpath)
 source '/usr/local/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/path.zsh.inc'
 source '/usr/local/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/completion.zsh.inc'
 
+eval "$(thefuck --alias)"
+
+alias zshconfig="${EDITOR} ~/.zshrc"
+alias ohmyzsh="${EDITOR} ~/.oh-my-zsh"
+alias envconfig="${EDITOR} ~/.env"
+alias vg="vagrant"
+alias tailf="tail -f"
 alias ll="ls -laFG" # Showing all files (with indicators) and colouring them in list
 alias pip-up="pip freeze --local | grep -v '^\-e' | cut -d = -f 1 | xargs -n1 pip install -U"
 alias pip3-up="pip3 freeze --local | grep -v '^\-e' | cut -d = -f 1 | xargs -n1 pip3 install -U"
@@ -35,3 +42,32 @@ function skype()
 
   open -na /Applications/Skype.app --args -DataPath /Users/$(whoami)/Library/Application\ Support/Skype${number}
 }
+
+function php-extension()
+{
+  php_version=$(php -r 'echo preg_replace("/(\d\.\d)\..+/", "$1", phpversion());')
+  from="zend_extension"
+  to=";zend_extension"
+  ext="/usr/local/etc/php/${php_version}/conf.d/ext-${1}.ini"
+
+  if [[ "${2}" == 'enable' ]]; then
+        sed -i.bak s/${to}/${from}/g ${ext}
+  else
+        sed -i.bak s/${from}/${to}/g ${ext}
+  fi
+
+  php -v
+}
+
+function my-ip()
+{
+    ip=$(ipconfig getifaddr en0)
+
+    [[ ${ip} == '' ]] && ip=$(ipconfig getifaddr en1)
+
+    [[ ${1} != true ]] && echo ${ip}
+
+    export DOCKER_MY_IP=${ip}
+}
+
+my-ip true
